--- a/src/routes/AppRouter.module.css
+++ b/src/routes/AppRouter.module.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: black;
+  background-color: white;
 }
 
 .section {
@@ -8,10 +8,10 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   font-size: 36px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 .nav button:nth-child(1) {
   display: none;
@@ -22,10 +22,8 @@ body {
 }
 .nav button {
   background-color: white;
-  border-radius: 10px;
-  border: 1px solid black;
-  width: 5px;
-  height: 15px;
+  width: 25px;
+  height: 5px;
   margin: 0 5px;
   font-size: 0px;
   cursor: pointer;
@@ -38,5 +36,6 @@ body {
   bottom: 10px;
 }
 button:disabled {
-  background-color: red;
+  width: 40px;
+  background-color: gray;
 }
