--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -7,7 +7,8 @@
   left: 0;
   right: 0;
   z-index: 10;
-  background-color: white;
+  /* background-color: rgba(0, 0, 0, 0.404); */
+  background-color: black;
 }
 .container a {
   text-decoration: none;
@@ -27,7 +28,7 @@
 }
 .title strong {
   font-size: 32px;
-  color: black;
+  color: white;
   letter-spacing: 0.5px;
 }
 .icon__list {
