Feat: add scroll animation

--- a/src/components/DrugApp.module.css
+++ b/src/components/DrugApp.module.css
@@ -9,13 +9,14 @@
 .txt {
   font-size: 15px;
   align-items: flex-end;
-  margin-right: 5%;
+  margin-right: 8%;
   width: 60%;
   color: black;
   font-style: italic;
   font-weight: bold;
 }
 .img {
+  animation: slidein 1.5s;
   margin-top: 5%;
   width: 90%;
   justify-content: right;
@@ -23,15 +24,30 @@
       box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
         0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025); */
 }
+.img:hover {
+  transform: rotate(10deg);
+  width: 95%;
+}
+
 @media screen and (max-width: 1090px) {
   /*반응형 웹페이지 만들기*/
   .txt {
     font-size: 10%;
     align-items: flex-end;
-    margin-right: 5%;
+    margin-right: 8%;
     width: 60%;
     color: black;
     font-style: italic;
     font-weight: bold;
+  }
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+  }
+
+  to {
+    margin-left: 0%;
   }
 }
